好好学习，天天向上

--- a/src/app/pages/setting/department-manage/department-manage.component.html
+++ b/src/app/pages/setting/department-manage/department-manage.component.html
@@ -14,7 +14,7 @@
     </tr>
     </thead>
     <tbody>
-    <ng-container *ngFor="let data of deptTable.data">
+    <ng-container *ngFor="let data of deptTable['data']">
       <ng-container *ngFor="let item of listOfExpandedData[data.key]">
         <tr *ngIf="(item.parent && item.parent.expand) || !item.parent">
           <td
