--- a/src/app/pages/setting/user-manage/user-manage.component.html
+++ b/src/app/pages/setting/user-manage/user-manage.component.html
@@ -11,6 +11,7 @@
     <button nz-button nzType="default" (click)="search(true)"><i nz-icon nzType="search"></i>查询</button>
     <button nz-button nzType="primary" (click)="addModalShow()"><i nz-icon type="plus"></i>新增</button>
     <button nz-button nzType="danger" (click)="delRole()"><i nz-icon type="delete"></i>删除</button>
+    <button nz-button nzType="primary" (click)="delRole()">设置角色</button>
     <button nz-button nzType="default"><i nz-icon nzType="export" nzTheme="outline"></i>导出</button>
   </div>
   <div class="list-table">
@@ -68,25 +69,25 @@
         <td nzAlign="center">{{ data.dateCreated }}</td>
         <td nzAlign="center" [ngSwitch]="data?.status">
           <div *ngSwitchCase="userStatus.DISABLE">
-            <a (click)="updateUserStatus(data.id, data.status)">启用</a>
+            <a (click)="enableUser(data.userId, data.accoutId)">启用</a>
           </div>
           <div *ngSwitchCase="userStatus.BLACK">
-            <a (click)="updateUserStatus(data.id, data.status)">解除黑名单</a>
+            <a (click)="rmUserBlack(data.userId, data.accoutId)">解除黑名单</a>
           </div>
           <div *ngSwitchCase="userStatus.CHECK_WAIT">
-            <a (click)="updateUserStatus(data.id, data.status)">审核</a>
+            <a (click)="checkUser(data.userId)">审核</a>
           </div>
           <div *ngSwitchCase="userStatus.CHECK_FAILURE">
-            <a (click)="editRole(data.id)">编辑</a>
+            <a (click)="editRole(data.userId)">编辑</a>
             <nz-divider nzType="vertical"></nz-divider>
-            <a (click)="updateUserStatus(data.id, data.status)">重新审核</a>
+            <a (click)="checkUser(data.userId)">重新审核</a>
           </div>
           <div *ngSwitchDefault>
-            <a (click)="editRole(data.id)">编辑</a>
+            <a (click)="editRole(data.userId)">编辑</a>
             <nz-divider nzType="vertical"></nz-divider>
-            <a (click)="updateUserStatus(data.id, data.status)">禁用</a>
+            <a (click)="disableUser(data.userId)">禁用</a>
             <nz-divider nzType="vertical"></nz-divider>
-            <a (click)="updateUserStatus(data.id, data.status)">拉黑</a>
+            <a (click)="addUserBlack(data.userId)">拉黑</a>
           </div>
         </td>
       </tr>
