--- a/src/app/pages/setting/user-manage/user-manage.component.html
+++ b/src/app/pages/setting/user-manage/user-manage.component.html
@@ -11,7 +11,7 @@
     <button nz-button nzType="default" (click)="search(true)"><i nz-icon nzType="search"></i>查询</button>
     <button nz-button nzType="primary" (click)="addModalShow()"><i nz-icon type="plus"></i>新增</button>
     <button nz-button nzType="danger" (click)="delRole()"><i nz-icon type="delete"></i>删除</button>
-    <button nz-button nzType="primary" (click)="delRole()">设置角色</button>
+    <button nz-button nzType="primary" nzGhost (click)="showSetUserRole()">设置角色</button>
     <button nz-button nzType="default"><i nz-icon nzType="export" nzTheme="outline"></i>导出</button>
   </div>
   <div class="list-table">
@@ -56,7 +56,7 @@
       <tr *ngFor="let data of userTable['data']">
         <td
           nzShowCheckbox
-          [(nzChecked)]="mapOfCheckedId[data.id]"
+          [(nzChecked)]="mapOfCheckedId[data.userId]"
           [nzDisabled]="data.disabled"
           (nzCheckedChange)="refreshStatus()"
         ></td>
@@ -227,7 +227,7 @@
       <nz-form-label [nzSm]="4" [nzXs]="24">状态</nz-form-label>
       <nz-form-control [nzSm]="10" [nzXs]="24">
         <nz-radio-group formControlName="status">
-          <label nz-radio nzValue="4">停用</label>
+          <label nz-radio nzValue="0">停用</label>
           <label nz-radio nzValue="1">正常</label>
         </nz-radio-group>
       </nz-form-control>
