好好学习，天天向上

--- a/src/app/pages/setting/user-manage/user-manage.component.html
+++ b/src/app/pages/setting/user-manage/user-manage.component.html
@@ -311,3 +311,13 @@
   </form>
 
 </nz-modal>
+
+<!--设置用户角色内容框-->
+<nz-modal [(nzVisible)]="isShowUserRolesModal"
+          nzWidth="800"
+          [nzMaskClosable]="false"
+          [nzTitle]="'设置用户角色'"
+          (nzOnOk)="setUserRolesHandleOk()"
+          (nzOnCancel)="setUserRolesHandleCancel()"
+          [nzOkLoading]="isModalOkLoading">
+</nz-modal>
