--- a/src/app/pages/setting/app-manage/app-manage.component.html
+++ b/src/app/pages/setting/app-manage/app-manage.component.html
@@ -1,1 +1,86 @@
-<p>app-manage works!</p>
+<nz-card class="card-content" nzTitle="用户列表">
+  <div class="card-content-action">
+    <nz-input-group [nzSuffix]="appNameSuffixTemplate">
+      <input type="text" nz-input [(ngModel)]="appName" placeholder="应用名称"/>
+    </nz-input-group>
+    <button nz-button nzType="default" (click)="search(true)"><i nz-icon nzType="search"></i>查询</button>
+    <button nz-button nzType="primary" (click)="addModalShow()"><i nz-icon type="plus"></i>新增</button>
+    <button nz-button nzType="danger" (click)="delApp()"><i nz-icon type="delete"></i>删除</button>
+  </div>
+
+  <div class="card-content-table">
+    <nz-table
+      #table
+      nzShowPagination
+      nzShowSizeChanger
+      nzBordered
+      [nzFrontPagination]="false"
+      [nzData]="listOfAllData"
+      [nzLoading]="loading"
+      [nzTotal]="total"
+      [(nzPageIndex)]="pageIndex"
+      [(nzPageSize)]="pageSize"
+      (nzPageIndexChange)="search()"
+      (nzPageSizeChange)="search(true)"
+      (nzCurrentPageDataChange)="currentPageDataChange($event)"
+    >
+      <thead>
+      <tr>
+        <th
+          nzShowCheckbox
+          [(nzChecked)]="isAllDisplayDataChecked"
+          [nzIndeterminate]="isIndeterminate"
+          (nzCheckedChange)="checkAll($event)"
+        ></th>
+        <th nzWidth="12%" nzAlign="center">应用ID</th>
+        <th nzWidth="12%" nzAlign="center">应用名称</th>
+        <th nzWidth="12%" nzAlign="center">应用密钥</th>
+        <th nzWidth="12%" nzAlign="center">应用类型</th>
+        <th nzWidth="12%" nzAlign="center">状态</th>
+        <th nzWidth="12%" nzAlign="center"
+            nzShowSort
+        >
+          创建时间
+        </th>
+        <th nzWidth="12%" nzAlign="center">应用描述</th>
+        <th nzWidth="16%" nzAlign="center">操作</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let data of table['data']">
+        <td
+          nzShowCheckbox
+          [(nzChecked)]="mapOfCheckedId[data.userId]"
+          [nzDisabled]="data.disabled"
+          (nzCheckedChange)="refreshStatus()"
+        ></td>
+        <td nzAlign="center">{{ data.username }}</td>
+        <td nzAlign="center">{{ data.deptName }}</td>
+        <td nzAlign="center">{{ data.email }}</td>
+        <td nzAlign="center">{{ data.mobile }}</td>
+        <td nzAlign="center">{{ data.sexTypeName }}</td>
+        <td nzAlign="center">{{ data.statusName}}</td>
+        <td nzAlign="center">{{ data.dateCreated }}</td>
+        <td nzAlign="center" [ngSwitch]="data?.status">
+          <a (click)="editUser(data.userId)">编辑</a>
+          <nz-divider nzType="vertical"></nz-divider>
+          <a (click)="disableUser(data.userId)">删除</a>
+        </td>
+      </tr>
+      </tbody>
+    </nz-table>
+  </div>
+
+</nz-card>
+
+<ng-template #appNameSuffixTemplate
+><i
+  nz-icon
+  nz-tooltip
+  class="ant-input-clear-icon"
+  nzTheme="fill"
+  nzType="close-circle"
+  *ngIf="appName"
+  (click)="appName = null"
+></i
+></ng-template>
