--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -13,3 +13,28 @@
     outline: #333 solid 1px
 }
 
+/*=========== 卡片列表以及其按钮样式 start ===========*/
+.card-content {
+  background: #fff;
+  padding: 24px;
+  min-height: 280px;
+
+  &-action {
+    margin-bottom: 25px;
+
+    &>nz-input-group {
+      width: 200px;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+
+    // 设置所有button属性
+    button {
+      margin-left: 15px;
+      margin-top: 20px;
+    }
+
+  }
+}
+
+/*=========== 卡片列表以及其按钮样式 end ===========*/
