好好学习，天天向上

--- a/src/app/pages/setting/permission-manage/permission-manage.component.html
+++ b/src/app/pages/setting/permission-manage/permission-manage.component.html
@@ -108,7 +108,7 @@
 </nz-modal>
 
 <!--分配角色-->
-<!--<nz-modal *ngIf="isShowSetRoleModal"
+<nz-modal *ngIf="isShowSetRoleModal"
           [(nzVisible)]="isShowSetRoleModal"
           nzWidth="800"
           [nzMaskClosable]="false"
@@ -189,4 +189,4 @@
     (click)="roleName = null"
   ></i
   ></ng-template>
-</nz-modal>-->
+</nz-modal>
