--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -14,7 +14,7 @@
 }
 
 /*=========== 卡片列表以及其按钮样式 start ===========*/
-.card-content {
+.card-list {
   background: #fff;
   padding: 24px;
   min-height: 280px;
@@ -24,7 +24,6 @@
 
     &>nz-input-group {
       width: 200px;
-      margin-left: 10px;
       margin-right: 10px;
     }
 
