--- a/src/app/pages/customer/etp-manage/etp-manage.component.html
+++ b/src/app/pages/customer/etp-manage/etp-manage.component.html
@@ -1,101 +1,108 @@
-<nz-card class="card-list" nzTitle="保理商列表">
-  <div class="card-list-action">
-    <nz-input-group [nzSuffix]="etpCodeSuffixTemplate">
-      <input type="text" nz-input [(ngModel)]="etpSearchVo.etpCode" placeholder="企业编号"/>
-    </nz-input-group>
-    <nz-input-group [nzSuffix]="fullNameSuffixTemplate">
-      <input type="text" nz-input [(ngModel)]="etpSearchVo.fullName" placeholder="企业名称"/>
-    </nz-input-group>
-    <button nz-button nzType="default" (click)="search(true)"><i nz-icon nzType="search"></i>查询</button>
-    <button nz-button nzType="primary" (click)="addModalShow(1)"><i nz-icon type="plus"></i>新增</button>
-    <button nz-button nzType="default"><i nz-icon nzType="export" nzTheme="outline"></i>导出</button>
-  </div>
-  <div class="card-list-table">
-    <nz-table
-      #etpTable
-      nzShowPagination
-      nzShowSizeChanger
-      nzBordered
-      [nzFrontPagination]="false"
-      [nzData]="listOfAllData"
-      [nzLoading]="loading"
-      [nzTotal]="total"
-      [(nzPageIndex)]="pageIndex"
-      [(nzPageSize)]="pageSize"
-      (nzPageIndexChange)="search()"
-      (nzPageSizeChange)="search(true)"
-      (nzCurrentPageDataChange)="currentPageDataChange($event)"
-    >
-      <thead>
-      <tr>
-        <th
-          nzShowCheckbox
-          [(nzChecked)]="isAllDisplayDataChecked"
-          [nzIndeterminate]="isIndeterminate"
-          (nzCheckedChange)="checkAll($event)"
-        ></th>
-        <th nzWidth="12%" nzAlign="center">企业编号</th>
-        <th nzWidth="15%" nzAlign="center">企业名称</th>
-        <th nzWidth="12%" nzAlign="center">联系人</th>
-        <th nzWidth="12%" nzAlign="center">联系电话</th>
-        <th nzWidth="10%" nzAlign="center">状态</th>
-        <th nzWidth="15%" nzAlign="center">注册地址</th>
-        <th nzWidth="12%" nzAlign="center"
-            nzShowSort
-        >
-          创建时间
-        </th>
-        <th nzWidth="12%" nzAlign="center">操作</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let data of etpTable['data']">
-        <td
-          nzShowCheckbox
-          [(nzChecked)]="mapOfCheckedId[data.id]"
-          [nzDisabled]="data.disabled"
-          (nzCheckedChange)="refreshStatus()"
-        ></td>
-        <td nzAlign="center">{{ data.etpCode }}</td>
-        <td nzAlign="center">{{ data.fullName }}</td>
-        <td nzAlign="center">{{ data.linkName }}</td>
-        <td nzAlign="center">{{ data.linkMobile }}</td>
-        <td nzAlign="center"><span [style.color]="uiHelper.setEtpStatusNameColor(data.etpStatus)">{{ data.etpStatusName}}</span></td>
-        <td nzAlign="center">{{ data.dateCreated }}</td>
-        <td nzAlign="center">
-          <div>
-            <a (click)="editEtp(data.id)">编辑</a>
-          </div>
-        </td>
-      </tr>
-      </tbody>
-    </nz-table>
-  </div>
-</nz-card>
+<div class="card-container">
+  <nz-tabset nzSize="large" [(nzSelectedIndex)]="tabIndex" [nzType]="'card'">
+    <nz-tab *ngFor="let title of tabTitle" [nzTitle]="title">
+      <div class="tab-card-list">
+        <!--搜索-->
+        <div class="tab-card-list-action">
+          <nz-input-group [nzSuffix]="etpCodeSuffixTemplate">
+            <input type="text" nz-input [(ngModel)]="etpSearchVo.etpCode" placeholder="企业编号"/>
+          </nz-input-group>
+          <nz-input-group [nzSuffix]="fullNameSuffixTemplate">
+            <input type="text" nz-input [(ngModel)]="etpSearchVo.fullName" placeholder="企业名称"/>
+          </nz-input-group>
+          <button nz-button nzType="default" (click)="search(true)"><i nz-icon nzType="search"></i>查询</button>
+          <button nz-button nzType="primary" (click)="addModalShow(1)"><i nz-icon type="plus"></i>新增</button>
+          <button nz-button nzType="default"><i nz-icon nzType="export" nzTheme="outline"></i>导出</button>
+        </div>
+        <!--列表-->
+        <div class="tab-card-list-table">
+          <nz-table
+            #etpTable
+            nzShowPagination
+            nzShowSizeChanger
+            nzBordered
+            [nzFrontPagination]="false"
+            [nzData]="listOfAllData"
+            [nzLoading]="loading"
+            [nzTotal]="total"
+            [(nzPageIndex)]="pageIndex"
+            [(nzPageSize)]="pageSize"
+            (nzPageIndexChange)="search()"
+            (nzPageSizeChange)="search(true)"
+            (nzCurrentPageDataChange)="currentPageDataChange($event)"
+          >
+            <thead>
+            <tr>
+              <th
+                nzShowCheckbox
+                [(nzChecked)]="isAllDisplayDataChecked"
+                [nzIndeterminate]="isIndeterminate"
+                (nzCheckedChange)="checkAll($event)"
+              ></th>
+              <th nzWidth="12%" nzAlign="center">企业编号</th>
+              <th nzWidth="15%" nzAlign="center">企业名称</th>
+              <th nzWidth="12%" nzAlign="center">联系人</th>
+              <th nzWidth="12%" nzAlign="center">联系电话</th>
+              <th nzWidth="10%" nzAlign="center">状态</th>
+              <th nzWidth="15%" nzAlign="center">注册地址</th>
+              <th nzWidth="12%" nzAlign="center"
+                  nzShowSort
+              >
+                创建时间
+              </th>
+              <th nzWidth="12%" nzAlign="center">操作</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let data of etpTable['data']">
+              <td
+                nzShowCheckbox
+                [(nzChecked)]="mapOfCheckedId[data.id]"
+                [nzDisabled]="data.disabled"
+                (nzCheckedChange)="refreshStatus()"
+              ></td>
+              <td nzAlign="center">{{ data.etpCode }}</td>
+              <td nzAlign="center">{{ data.fullName }}</td>
+              <td nzAlign="center">{{ data.linkName }}</td>
+              <td nzAlign="center">{{ data.linkMobile }}</td>
+              <td nzAlign="center"><span [style.color]="uiHelper.setEtpStatusNameColor(data.etpStatus)">{{ data.etpStatusName}}</span></td>
+              <td nzAlign="center">{{ data.dateCreated }}</td>
+              <td nzAlign="center">
+                <div>
+                  <a (click)="editEtp(data.id)">编辑</a>
+                </div>
+              </td>
+            </tr>
+            </tbody>
+          </nz-table>
+        </div>
 
-<ng-template #etpCodeSuffixTemplate
-><i
-  nz-icon
-  nz-tooltip
-  class="ant-input-clear-icon"
-  nzTheme="fill"
-  nzType="close-circle"
-  *ngIf="etpSearchVo.etpCode"
-  (click)="etpSearchVo.etpCode = null"
-></i
-></ng-template>
-
-<ng-template #fullNameSuffixTemplate
-><i
-  nz-icon
-  nz-tooltip
-  class="ant-input-clear-icon"
-  nzTheme="fill"
-  nzType="close-circle"
-  *ngIf="etpSearchVo.etpCode"
-  (click)="etpSearchVo.etpCode = null"
-></i
-></ng-template>
+        <ng-template #etpCodeSuffixTemplate
+        ><i
+          nz-icon
+          nz-tooltip
+          class="ant-input-clear-icon"
+          nzTheme="fill"
+          nzType="close-circle"
+          *ngIf="etpSearchVo.etpCode"
+          (click)="etpSearchVo.etpCode = null"
+        ></i
+        ></ng-template>
+        <ng-template #fullNameSuffixTemplate
+        ><i
+          nz-icon
+          nz-tooltip
+          class="ant-input-clear-icon"
+          nzTheme="fill"
+          nzType="close-circle"
+          *ngIf="etpSearchVo.fullName"
+          (click)="etpSearchVo.fullName = null"
+        ></i
+        ></ng-template>
+      </div>
+    </nz-tab>
+  </nz-tabset>
+</div>
 
 <!--新增、编辑-->
 <nz-modal *ngIf="isShowAddOrEditModal"
@@ -104,7 +111,7 @@
           [nzMaskClosable]="false"
           [nzTitle]="modalType === 1 ? '新增' : '修改'"
           (nzOnCancel)="handleCancel(modalType)"
-          (nzOnOk)="handleOk()"
+          (nzOnOk)="handleOk(modalType)"
           [nzOkLoading]="isModalOkLoading">
 
   <form nz-form [formGroup]="addOrEditForm">
