--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -37,3 +37,28 @@
 }
 
 /*=========== 卡片列表以及其按钮样式 end ===========*/
+
+/*=============start=========*/
+.tab-card-list {
+  background: #fff;
+  margin-left: 8px;
+  margin-right: 8px;
+  margin-top: 15px;
+  min-height: 400px;
+
+  &-action {
+    margin-bottom: 25px;
+
+    &>nz-input-group {
+      width: 200px;
+      margin-right: 10px;
+    }
+
+    // 设置所有button属性
+    button {
+      margin-left: 15px;
+    }
+
+  }
+}
+/*===========end===========*/
