好好学习，天天向上。

--- a/src/app/pages/customer/etp-manage/etp-manage.component.html
+++ b/src/app/pages/customer/etp-manage/etp-manage.component.html
@@ -44,7 +44,7 @@
               <th nzWidth="12%" nzAlign="center">联系人</th>
               <th nzWidth="12%" nzAlign="center">联系电话</th>
               <th nzWidth="10%" nzAlign="center">状态</th>
-              <th nzWidth="15%" nzAlign="center">注册地址</th>
+              <th nzWidth="15%" nzAlign="center">注册邀请码</th>
               <th nzWidth="12%" nzAlign="center"
                   nzShowSort
               >
