--- a/src/app/pages/setting/department-manage/department-manage.component.html
+++ b/src/app/pages/setting/department-manage/department-manage.component.html
@@ -1,6 +1,6 @@
 <!--菜单列表-->
-<nz-card class="dept-card" nzTitle="部门列表" [nzExtra]="extraTemplate">
-  <div class="dept-card-action">
+<nz-card class="card-list" nzTitle="部门列表" [nzExtra]="extraTemplate">
+  <div class="card-list-action">
     <button nz-button nzType="primary" (click)="showAddModal()"><i nz-icon type="plus"></i>新增</button>
   </div>
   <!--列表-->
