--- a/src/app/theme/components/app-header/app-header.component.less
+++ b/src/app/theme/components/app-header/app-header.component.less
@@ -6,10 +6,12 @@
   width: 100%;
   height: 50px;
   flex: 0 0 50px;
-  background: #fff;
-  border-bottom: 1px solid #c8ced3;
+  //background: #fff;
+  background: #409EFF;
+  //border-bottom: 0px solid #c8ced3;
   display: flex;
   flex-direction: row;
+  color: #ffffff;
 
   .brand {
     display: inline-block;
@@ -21,7 +23,7 @@
     padding: 0 24px;
     font-weight: bold;
     text-decoration: none;
-    color: #2f353a;
+    color: #ffffff;
 
     img {
       margin-right: 10px;
