--- a/src/app/pages/setting/department-manage/department-manage.component.less
+++ b/src/app/pages/setting/department-manage/department-manage.component.less
@@ -1,18 +1,3 @@
-.dept-card {
-  background: #fff;
-  padding: 24px;
-  min-height: 280px;
-
-  &-action {
-    margin-bottom: 25px;
-
-    button {
-      margin-left: 15px;
-    }
-
-  }
-}
-
-nz-form-control {
-  min-width: 550px;
+.card-list-action {
+  margin-left: -15px;
 }
