好好学习，天天向上。

--- a/src/app/pages/setting/permission-manage/permission-manage.component.html
+++ b/src/app/pages/setting/permission-manage/permission-manage.component.html
@@ -169,7 +169,7 @@
           <td nzAlign="center">{{ data.description }}</td>
           <td nzAlign="center">{{ data.dateCreated }}</td>
           <td nzAlign="center">
-            <!--<a (click)="editRole(data.id)">编辑</a>
+            <!--<a (click)="editRole(data.id)">编</a>
             <a (click)="delRoleSingle(data.id, data.roleName)">删除</a>-->
           </td>
         </tr>
