--- a/src/app/pages/setting/file-manage/file-manage.component.html
+++ b/src/app/pages/setting/file-manage/file-manage.component.html
@@ -96,19 +96,108 @@
           (nzOnOk)="configHandleOk()"
           [nzOkLoading]="isConfigOkLoading">
 
-  <nz-radio-group [(ngModel)]="radioValue"  (ngModelChange)="selectStorageConfigType($event)" class="storage-config-type">
+  <nz-radio-group [(ngModel)]="storageRadioValue"  (ngModelChange)="selectStorageConfigType($event)" class="storage-config-type">
     <label><span>类型</span></label>
-    <label nz-radio nzValue="A">阿里云</label>
-    <label nz-radio nzValue="B">腾讯云</label>
-    <label nz-radio nzValue="C">FastDFS</label>
+    <label nz-radio nzValue="A">七牛云</label>
+    <label nz-radio nzValue="B">阿里云</label>
+    <label nz-radio nzValue="C">腾讯云</label>
+    <label nz-radio nzValue="D">FastDFS</label>
   </nz-radio-group>
   <form nz-form [formGroup]="storageConfigForm">
     <nz-form-item>
-      <nz-form-label [nzSm]="" [nzXs]="24" nzFor="url" nzRequired>名称</nz-form-label>
-      <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="权限名称不能为空">
-        <input nz-input id="url" formControlName="url" placeholder="菜单名称"/>
+      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="url" nzRequired>域名</nz-form-label>
+      <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="必填项不能为空">
+        <input nz-input id="url" formControlName="url" placeholder="云存储域名"/>
       </nz-form-control>
     </nz-form-item>
+    <nz-form-item>
+      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="prefix">路径前缀</nz-form-label>
+      <nz-form-control [nzSm]="10" [nzXs]="24">
+        <input nz-input id="prefix" formControlName="prefix" placeholder="不设置默认为空"/>
+      </nz-form-control>
+    </nz-form-item>
+
+    <!--七牛云-->
+    <div *ngIf="storageRadioValue === 'A'">
+      <nz-form-item>
+        <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="accessKey" nzRequired>AccessKey</nz-form-label>
+        <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="必填项不能为空">
+          <input nz-input id="accessKey" formControlName="accessKey" placeholder="七牛AccessKey"/>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="secretKey" nzRequired>SecretKey</nz-form-label>
+        <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="必填项不能为空">
+          <input nz-input id="secretKey" formControlName="secretKey" placeholder="七牛SecretKey"/>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="spaceName" nzRequired>空间名</nz-form-label>
+        <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="必填项不能为空">
+          <input nz-input id="spaceName" formControlName="spaceName" placeholder="七牛存储空间名"/>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <!--阿里云-->
+    <div *ngIf="storageRadioValue === 'B'">
+      <nz-form-item>
+        <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="endPoint" nzRequired>EndPoint</nz-form-label>
+        <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="必填项不能为空">
+          <input nz-input id="endPoint" formControlName="endPoint" placeholder="阿里云EndPoint"/>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="accessKeyId" nzRequired>AccessKeyId</nz-form-label>
+        <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="必填项不能为空">
+          <input nz-input id="accessKeyId" formControlName="accessKeyId" placeholder="阿里云AccessKeyId"/>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="accessKeySecret" nzRequired>AccessKeySecret</nz-form-label>
+        <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="必填项不能为空">
+          <input nz-input id="accessKeySecret" formControlName="accessKeySecret" placeholder="阿里云AccessKeySecret"/>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="bucketName" nzRequired>BucketName</nz-form-label>
+        <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="必填项不能为空">
+          <input nz-input id="bucketName" formControlName="bucketName" placeholder="阿里云BucketName"/>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+
+    <!--腾讯云-->
+    <div *ngIf="storageRadioValue === 'C'">
+      <nz-form-item>
+        <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="appId" nzRequired>AppId</nz-form-label>
+        <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="必填项不能为空">
+          <input nz-input id="appId" formControlName="appId" placeholder="腾讯云AppId"/>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="secretId" nzRequired>SecretId</nz-form-label>
+        <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="必填项不能为空">
+          <input nz-input id="secretId" formControlName="secretId" placeholder="腾讯云SecretId"/>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="tSecretKey" nzRequired>SecretKey</nz-form-label>
+        <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="必填项不能为空">
+          <input nz-input id="tSecretKey" formControlName="tSecretKey" placeholder="腾讯云SecretKey"/>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="tBucketName" nzRequired>BucketName</nz-form-label>
+        <nz-form-control [nzSm]="10" [nzXs]="24" nzErrorTip="必填项不能为空">
+          <input nz-input id="tBucketName" formControlName="tBucketName" placeholder="腾讯云BucketName"/>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+
+    <!--FastDFS-->
+    <div *ngIf="storageRadioValue === 'D'">
+
+    </div>
   </form>
 
 </nz-modal>n
