--- a/src/app/pages/setting/menu-manage/menu-manage.component.html
+++ b/src/app/pages/setting/menu-manage/menu-manage.component.html
@@ -1,5 +1,5 @@
 <!--菜单列表-->
-<nz-card class="content" nzTitle="用户菜单列表" [nzExtra]="extraTemplate">
+<nz-card class="content" nzTitle="应用菜单列表" [nzExtra]="extraTemplate">
   <div class="content-action">
     <nz-select
       nzShowSearch
