--- a/src/assets/styles/theme-default.less
+++ b/src/assets/styles/theme-default.less
@@ -1,5 +1,4 @@
-//@import "~node_modules/ng-zorro-antd/ng-zorro-antd.less";
-@import "~_ng-zorro-antd@8.5.2@ng-zorro-antd/ng-zorro-antd.less";
+@import "~ng-zorro-antd/ng-zorro-antd.less";
 
 // The prefix to use on all css classes from ant.
 @ant-prefix : ant;
